test/equality/negative/comp_type_arg.mli
type 'a t

val f : 'a t -> 'b t -> int
(*@ comparison *)
